first working version

--- a/Pipfile
+++ b/Pipfile
@@ -3,11 +3,10 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 name = "pypi"
 
-[dev-packages]
-"flake8" = "*"
-
 [packages]
 google-cloud-storage = "*"
+pandas = "*"
+matplotlib = "*"
 
 [requires]
 python_version = "3.9"
