--- a/_infra/docker/Dockerfile
+++ b/_infra/docker/Dockerfile
@@ -4,7 +4,7 @@ FROM python:3.9-slim
 RUN pip install pipenv
 
 COPY . .
-RUN pipenv install --deploy --system
 
-CMD ["./process-result.sh"]
+RUN pipenv install
+CMD ["./process-results.sh"]
 
