--- a/_infra/helm/ras-rm-benchmark/templates/job.yaml
+++ b/_infra/helm/ras-rm-benchmark/templates/job.yaml
@@ -18,11 +18,9 @@ spec:
           {{- end}}
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           env:
+            - name: GOOGLE_CLOUD_PROJECT
+              value: "ras-rm-performance-tests"
             - name: GCS_OUTPUT_BUCKET
               value: "{{ .Values.output.bucket }}"
             - name: OUTPUT_DIRECTORY
-              value: "{{ .Values.output.directory }}"
-            - name: OUTPUT_FILENAME_PREFIX
-              valueFrom:
-                fieldRef:
-                  fieldPath: metadata.name
+              value: "results"
