--- a/_infra/helm/ras-rm-benchmark/values.yaml
+++ b/_infra/helm/ras-rm-benchmark/values.yaml
@@ -1,7 +1,7 @@
 image:
   devRepo: eu.gcr.io/ons-rasrmbs-management
   name: eu.gcr.io/ons-rasrmbs-management
-  tag: warren-250321
+  tag: latest
   pullPolicy: Always
 
 output:
