undo change to action

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,7 @@ on:
       - main
     paths-ignore:
       - _infra/spinnaker/**
+      - _infra/helm/ras-rm-benchmark/Chart.yaml
 
 env:
   IMAGE: ras-rm-benchmark
